Mutexes and Philos initialized
This means the mutexes have been initialized with their proper function and the philos now have their correct values assigned, along with their forks

Debug function created

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -34,7 +34,7 @@ MAKE		= make -s
 HDRS		= $(INC_DIR)philosophers.h
 # -=-=-=-=-	SOURCES -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=- #
 
-SRCS		:= philosophers.c parse.c print.c utils.c
+SRCS		:= philosophers.c parse.c print.c utils.c initialize.c debug.c
 
 # -=-=-=-=-	OBJECTS/DEPENDENCIES -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=- #
 
