Lots of things added
Death now works different

Bugs solved when printing death and when counting the times a philosophers ate

Try finding a way of making consistent the program when there are a lot of philosophers (like 4000)

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -24,7 +24,7 @@ INC_DIR	= hdrs/
 # -=-=-=-=-	CMNDS -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=- #
 CC			= gcc
 SANS		= -fsanitize=address -g
-CFLAGS		= -Wall -Werror -Wextra
+CFLAGS		= -Wall -Werror -Wextra $(SANS)
 AR			= ar -rcs
 RM			= rm -f
 MKDIR		= mkdir -p
