Project almost finished
Do some more tests on the campus and submit it

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -34,7 +34,7 @@ MAKE		= make -s
 HDRS		= $(INC_DIR)philosophers.h
 # -=-=-=-=-	SOURCES -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=- #
 
-SRCS		:= philosophers.c parse.c print.c utils.c initialize.c debug.c threads.c
+SRCS		:= philosophers.c parse.c print.c utils.c initialize.c debug.c threads.c mutex_utils.c
 
 # -=-=-=-=-	OBJECTS/DEPENDENCIES -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=- #
 
