The project doesnt use exit now
Create a function which receives an iterator to know which mutexes destroy and when to stop if an error occurs

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -23,7 +23,7 @@ INC_DIR	= hdrs/
 
 # -=-=-=-=-	CMNDS -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=- #
 CC			= gcc
-#SANS		= -fsanitize=thread -g
+SANS		= -fsanitize=thread -g
 CFLAGS		= -Wall -Werror -Wextra
 AR			= ar -rcs
 RM			= rm -f
